--- a/mandelbulber2/qt/objects_tree_widget.ui
+++ b/mandelbulber2/qt/objects_tree_widget.ui
@@ -30,6 +30,13 @@
        </property>
       </widget>
      </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_refresh">
+       <property name="text">
+        <string>Refresh</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
